# rust-ipcrypt

./: Cargo.toml  README.md  rustfmt.toml
.travis/: id_rsa.enc  travis-doc-upload.cfg
examples/: attack.rs  cipcrypt.rs
src/: lib.rs
