[package]
name = "ipcrypt"
# also bump version in html_root_url in src/lib.rs
version = "0.1.0"
authors = ["Stefan Bühler <stbuehler@web.de>"]
description = "Symmetric IPv4 address encryption"
documentation = "https://docs.rs/ipcrypt"
homepage = "https://github.com/stbuehler/rust-ipcrypt"
repository = "https://github.com/stbuehler/rust-ipcrypt"
categories = ["cryptography"]
keywords = ["ipcrypt"]
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "stbuehler/rust-ipcrypt" }
appveyor = { repository = "stbuehler/rust-ipcrypt" }

[[example]]
name = "attack"

[[example]]
name = "cipcrypt"
crate-type = ["cdylib"]

[profile.release]
panic = 'abort'
lto = true

[features]
no-std = []

[dependencies]

[dev-dependencies]
rand = "0.4"
